2008-07-19  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver & parts by Eric.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=20051

        Rewrite animated property concept without heavy macro usage, replace by a templatified solution.
        Fewer virtual function calls, no more usage of the tear-off's within internal code (synchronization needed it before.)

        * dom/Element.cpp:
        (WebCore::Element::attributes):
        (WebCore::Element::getAttribute):
        (WebCore::Element::hasAttributes):
        * dom/Element.h:
        (WebCore::Element::updateAnimatedSVGAttribute): Take const String&, not StringImpl*.
        * svg/SVGAElement.cpp:
        (WebCore::SVGAElement::SVGAElement):
        * svg/SVGAElement.h:
        * svg/SVGAltGlyphElement.h:
        * svg/SVGAnimatedProperty.h: Added.
        * svg/SVGAnimatedTemplate.h:
        (WebCore::lookupOrCreateWrapper):
        * svg/SVGAnimationElement.h:
        * svg/SVGCircleElement.cpp:
        (WebCore::SVGCircleElement::SVGCircleElement):
        * svg/SVGCircleElement.h:
        * svg/SVGClipPathElement.cpp:
        (WebCore::SVGClipPathElement::SVGClipPathElement):
        * svg/SVGClipPathElement.h:
        * svg/SVGComponentTransferFunctionElement.cpp:
        (WebCore::SVGComponentTransferFunctionElement::SVGComponentTransferFunctionElement):
        * svg/SVGComponentTransferFunctionElement.h:
        * svg/SVGCursorElement.cpp:
        (WebCore::SVGCursorElement::SVGCursorElement):
        * svg/SVGCursorElement.h:
        * svg/SVGDefsElement.h:
        (WebCore::SVGDefsElement::contextElement):
        * svg/SVGElement.cpp:
        (WebCore::SVGElement::updateAnimatedSVGAttribute):
        * svg/SVGElement.h:
        (WebCore::SVGElement::supplementalTransform):
        (WebCore::SVGElement::invokeSVGPropertySynchronizer):
        (WebCore::SVGElement::invokeAllSVGPropertySynchronizers):
        (WebCore::SVGElement::addSVGPropertySynchronizer):